--- a/TODO
+++ b/TODO
@@ -1,6 +1,14 @@
 // ================================================== //
 
 + [ ] write code base to test data persistence
+
++ [ ] implement habit persistence code
+    + [x] implement method to initialize the habit database
+    + [ ] imlpement method to query habit by id
+    + [x] implement method to create new habit
+    + [ ] implement method to delete existing habits
+    + [ ] implement method to modify existing habits
+
 + [ ] write basic command line arguments and program commands
 
 // ================================================== //
