--- a/TODO
+++ b/TODO
@@ -2,12 +2,14 @@
 
 + [ ] write code base to test data persistence
 
-+ [ ] implement habit persistence code
++ [x] write code to persist habit data
     + [x] implement method to initialize the habit database
-    + [ ] imlpement method to query habit by id
+    + [x] imlpement method to query habit by id
     + [x] implement method to create new habit
     + [x] implement method to delete existing habits
-    + [ ] implement method to modify existing habits
+    + [x] implement method to modify existing habits
+
++ [ ] create a method for recording daily habits
 
 + [ ] write basic command line arguments and program commands
 
